Replace emoji code with emoticon.

--- a/docs/_posts/2024-08-30-content.md
+++ b/docs/_posts/2024-08-30-content.md
@@ -3,7 +3,7 @@ layout: post
 title: "Content"
 image: assets/images/Zoie_hodling_usb.png
 ---
-It's a secret! :sunglasses:
+It's a secret! ;-)
 
 Well, yes. But we can still tell you this.
 
