Fix ad scrolling.

--- a/docs/_posts/2024-08-27-payment.md
+++ b/docs/_posts/2024-08-27-payment.md
@@ -4,4 +4,6 @@ title: "Payment"
 image: assets/images/Zoie_holding_money.png
 comments: false
 ---
-It's a subscription like no other. We'll prompt you every month for the subscription fee, and if you don't accept, we won't charge you. Alternatively, if you love the product, you can opt-in for automatic payments.
+Subscription like no other. 
+
+We'll prompt you every month for the subscription fee, and if you don't accept, we won't charge you. Alternatively, if you love the product, you can opt-in for automatic payments.
