Clarify subscription and payments.

--- a/docs/_posts/2024-08-27-payment.md
+++ b/docs/_posts/2024-08-27-payment.md
@@ -4,6 +4,4 @@ title: "Payment"
 image: assets/images/Zoie_holding_money.png
 comments: false
 ---
-Subscription like no other. 
-
-We'll prompt you every month for the subscription fee, and if you don't accept, we won't charge you. Alternatively, if you love the product, you can opt-in for automatic payments.
+No recurring payments by default. We'll invite you to pay when a new collection is coming, and if you don't accept, we won't charge you. Alternatively, if you love the product, you can opt-in for automatic payments.
