--- a/docs/_posts/2024-08-27-payment.md
+++ b/docs/_posts/2024-08-27-payment.md
@@ -4,4 +4,4 @@ title: "Payment"
 image: assets/images/Zoie_holding_money.png
 comments: false
 ---
-No recurring payments by default. We'll invite you to pay when a new collection is coming, and if you don't accept, we won't charge you. Alternatively, if you love the product, you can opt-in for automatic payments.
+There are no recurring payments by default. We'll notify you when a new collection is available, and if you choose not to proceed, you won't be charged. However, if you love the product, you can choose to opt in for automatic payments.
