--- a/docs/_posts/2024-08-30-content.md
+++ b/docs/_posts/2024-08-30-content.md
@@ -1,14 +1,17 @@
 ---
 layout: post
 title: "Content"
-image: assets/images/Zoie_hodling_usb.png
+image: assets/images/Zoie_holding_usb.png
 ---
 It's a secret! ;-)
 
-Well, yes. But we can still tell you this.
+Well, yes. But here’s what we can tell you:
 
-You get a carefully handpicked collection of indie video games, films, music, and art. You don't get the most popular titles. You get titles that are high quality, fun and interesting that you normally might not bump into. There are two key ideas:
- - the user to discover new and fresh things
- - the creators to get exposure to wider audience
+You'll receive a carefully curated collection of indie video games, films, music, and art. These aren’t the most popular titles, but rather high-quality, fun, and interesting works that you might not come across otherwise. The collection is built around two key principles:
 
-The collection is unique every time. However, the focus is usually on video games.
+    Helping users discover fresh, new content
+    Giving creators greater exposure to a broader audience
+
+Each collection is unique, though the primary focus is often on video games.
+
+*Note*: All content is licensed under a [Creative Commons license](https://creativecommons.org/share-your-work/cclicenses/) or other royalty-free licenses. Additionally, all content is scanned with **Microsoft Defender Antivirus** for viruses and malware.
