Add digital download price.

--- a/docs/_posts/2024-08-30-content.md
+++ b/docs/_posts/2024-08-30-content.md
@@ -8,9 +8,8 @@ It's a secret! ;-)
 Well, yes. But here’s what we can tell you:
 
 You'll receive a carefully curated collection of indie video games, films, music, and art. These aren’t the most popular titles, but rather high-quality, fun, and interesting works that you might not come across otherwise. The collection is built around two key principles:
-
-    Helping users discover fresh, new content
-    Giving creators greater exposure to a broader audience
+- Helping users discover fresh, new content
+- Giving creators greater exposure to a broader audience
 
 Each collection is unique, though the primary focus is often on video games.
 
