--- a/docs/_posts/2024-08-30-content.md
+++ b/docs/_posts/2024-08-30-content.md
@@ -3,7 +3,7 @@ layout: post
 title: "Content"
 image: assets/images/Zoie_holding_usb.png
 ---
-It's a secret! ;-)
+It's a surprise! ;-)
 
 Well, yes. But here’s what we can tell you:
 
